fix sm sizes overflox on iphones

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html {
   width: 100%; */
 }
 /* safari option */
-body {
+body .overflow-sm-sizes {
   touch-action: pan-y;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior-x: none;
